--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,8 +7,13 @@
   <div class="sidebar-item">
     <div class="sidebar-personal-info">
       <div class="sidebar-personal-info-section">
+        <!--
         <a href="http://gravatar.com/{{ site.author.gravatar }}">
           <img src="http://www.gravatar.com/avatar/{{ site.author.gravatar }}?s=350" title="View on Gravatar" alt="View on Gravatar" />
+        </a>
+        -->
+        <a href={{ site.author.linkedin }}>
+          <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAjTAAAAJDRhYzNlOGNkLWI0NjAtNDkwYS1iZDE0LWM1MzZkY2VmYzllNQ.jpg" title="Ver en linkedin" alt="Ver en linkedin" />
         </a>
       </div>
       <div class="sidebar-personal-info-section">
@@ -72,7 +77,7 @@
 
   <div class="sidebar-item">
     <p>
-    &copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. This work is liscensed under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a>.
+    &copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. This work is licensed under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a>.
     </p>
   </div>
 
