--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
           <img src="http://www.gravatar.com/avatar/{{ site.author.gravatar }}?s=350" title="View on Gravatar" alt="View on Gravatar" />
         </a>
         -->
-        <a href={{ site.author.linkedin }}>
+        <a href="{{ site.author.contact.linkedin }}">
           <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAjTAAAAJDRhYzNlOGNkLWI0NjAtNDkwYS1iZDE0LWM1MzZkY2VmYzllNQ.jpg" title="Ver en linkedin" alt="Ver en linkedin" />
         </a>
       </div>
