--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,11 @@
         <div class="container">
           <h3 class="masthead-title">
             <a href="{{ site.baseurl }}/" title="Home" title="{{ site.title }}">
+              <!--
               <img class="masthead-logo" src="{{ site.baseurl }}{{ site.logo }}"/>
+              -->
+              <!-- FIXME TODO Subir el logo al directorio public y referenciarlo en el _config.yml -->
+              <img class="masthead-logo" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAjTAAAAJDRhYzNlOGNkLWI0NjAtNDkwYS1iZDE0LWM1MzZkY2VmYzllNQ.jpg"/>
             </a>
             <small>{{ site.tagline }}</small>
           </h3>
