--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,9 @@
               <img class="masthead-logo" src="{{ site.baseurl }}{{ site.logo }}"/>
               -->
               <!-- FIXME TODO Subir el logo al directorio public y referenciarlo en el _config.yml -->
+              <!-- ELIMINO LOGO 
               <img class="masthead-logo" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAjTAAAAJDRhYzNlOGNkLWI0NjAtNDkwYS1iZDE0LWM1MzZkY2VmYzllNQ.jpg"/>
+              -->
             </a>
             <small>{{ site.tagline }}</small>
           </h3>
