site.tittle en vez de logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,15 +13,7 @@
       <div class="masthead">
         <div class="container">
           <h3 class="masthead-title">
-            <a href="{{ site.baseurl }}/" title="Home" title="{{ site.title }}">
-              <!--
-              <img class="masthead-logo" src="{{ site.baseurl }}{{ site.logo }}"/>
-              -->
-              <!-- FIXME TODO Subir el logo al directorio public y referenciarlo en el _config.yml -->
-              <!-- ELIMINO LOGO 
-              <img class="masthead-logo" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAjTAAAAJDRhYzNlOGNkLWI0NjAtNDkwYS1iZDE0LWM1MzZkY2VmYzllNQ.jpg"/>
-              -->
-            </a>
+            <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
             <small>{{ site.tagline }}</small>
           </h3>
         </div>
