--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -314,6 +314,7 @@ tbody tr:nth-child(odd) th {
 }
 .masthead-title a {
   color: #505050;
+  font-size: 4vw;
 }
 .masthead-title small {
   font-size: 75%;
