--- a/_scss/component/_masthead.scss
+++ b/_scss/component/_masthead.scss
@@ -21,6 +21,7 @@
     a {
       color: $theme-color;
       text-decoration: none;
+      font-size: 4vw;
     }
     small {
       font-size: 75%;
