--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
                 <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
                 <path d="M0 0h24v24H0z" fill="none"/>
               </svg>
+              {{ site.title }}
             </a>
             <small>{{ site.tagline }}</small>
           </h3>
